add: Get Latest telegram records by user id handler to swagger
